--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,19 @@ plugins {
 group = 'com.bokkurin.trackery'
 version = '1.0-SNAPSHOT'
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.bokkurin.trackery.Main'
+    }
+    from {
+        configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+
 repositories {
     mavenCentral()
 }
